--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 ---
-version: '3.8'
+version '3.8'
 services:
   node:
     container_name: node
-    build: .
-    ports:
-      - "8081:80"
+    build: ./
+	ports:
+	  - "81:80"
 ...
