--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
----
-version '3.8'
+version: '3.8'
 services:
   node:
     container_name: node
     build: ./
-	ports:
-	  - "81:80"
-...
+    ports:
+      - "81:80"
