--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,21 @@
+---
 version: '3.8'
 services:
   node:
-    container_name: node
-    build: .
+    build: ./
+    image: viswanathkasi/node
+    deploy:
+      replicas: 5
     ports:
       - "81:80"
+...
+
+
+
+#version: '3.8'
+#services:
+#  node:
+#    container_name: node
+#    build: .
+#    ports:
+#      - "81:80"
